# discord_commit_tracker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
discord_commit_tracker/: bot.py  commands.py  config.py  db.py  embeds.py  main.py  security.py  server.py
docs/: discord-commit-bot-spec.md  project-plan.md
tests/: helpers.py  test_commands.py  test_config.py  test_db.py  test_db_init.py  test_embeds.py  test_filtering.py  test_server.py  test_webhook.py  test_webhook_signature.py
tests/fixtures/: push_multi_commit.json  push_non_default_branch.json  push_single_commit.json
